--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,22 +30,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
   flutter_bloc: ^8.1.3
   equatable: ^2.0.5
-
-  # 🌐 API Calls
   http: ^1.3.0
-
-  # 🔐 For storing API key safely if needed (optional, for .env)
   flutter_dotenv: ^5.1.0
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  flutter_screenutil: ^5.0.0 # Use the latest version
-  # Add the google_fonts package
+  flutter_screenutil: ^5.0.0 
   google_fonts: ^6.1.1
 
 dev_dependencies:
